# TerminalChess

./: .gitignore  CMakeLists.txt  CMakeLists_GUI.txt  Chess.cpp  Chess.txt  README.md  ch  cobanmate.txt  compileWarnings.txt  flameChess  gameCLI  test  toolchain-mingw.cmake
src/: Game.cpp  gui.cpp  main.cpp
src/BoardHash/: BoardHash.cpp  BoardHash.h
src/Chess/: Chess.cpp  Chess.h  chess_game  test  test.cpp  yagizKorlemeWin  yagizLose
src/ChessApp/: ChessApp.cpp  ChessApp.h
src/FlameBot/: FlameBot.cpp  FlameBot.h
ui/: appGui.slint
